# ogredeps

./: .gitignore  meson.build
src/: meson.build
src/Remotery/src/: RemoteryConfig.h
src/SDL2/: BUILD
src/freetype/: BUILD  meson.build
src/rapidjson/: BUILD  meson.build
src/zlib/: BUILD  meson.build
src/zziplib/: BUILD  meson.build
