cc = meson.get_compiler('cpp')


incdir = include_directories(
  '.',
)

#HlmsCommon = library('HlmsCommonComponent', lib_src,
#  link_with: [
#    ],
#  dependencies: [
#    OgreMainDep
#  ],
#  include_directories : incdir)

RapidJsonDep = declare_dependency(
        #link_with : HlmsCommon,
  include_directories : incdir)
